deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-template-service
spec:
  selector:
    app: react-template
  ports:
    - protocol: TCP
      port: 80
